--- a/歡迎使用_Colaboratory.ipynb
+++ b/歡迎使用_Colaboratory.ipynb
@@ -16,11 +16,11 @@
         "print(\"Hi\")"
       ],
       "metadata": {
-        "id": "JSCacWEvVGHY",
-        "outputId": "72c14ef0-87f1-44b8-e025-b20660781e96",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JSCacWEvVGHY",
+        "outputId": "72c14ef0-87f1-44b8-e025-b20660781e96"
       },
       "execution_count": 1,
       "outputs": [
@@ -61,11 +61,11 @@
         "a"
       ],
       "metadata": {
-        "id": "Qjr9yGBuVRPX",
-        "outputId": "3d8d299e-d606-4591-aa35-188f11604af6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Qjr9yGBuVRPX",
+        "outputId": "3d8d299e-d606-4591-aa35-188f11604af6"
       },
       "execution_count": 4,
       "outputs": [
@@ -87,11 +87,11 @@
         "b"
       ],
       "metadata": {
-        "id": "GlCkqVsDVTm4",
-        "outputId": "782f93ed-1d31-4f85-b5a5-78e7801733a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GlCkqVsDVTm4",
+        "outputId": "782f93ed-1d31-4f85-b5a5-78e7801733a6"
       },
       "execution_count": 5,
       "outputs": [
@@ -113,11 +113,11 @@
         "print(a)"
       ],
       "metadata": {
-        "id": "OnLkox--VU14",
-        "outputId": "29a4a790-3358-48b6-d63b-24c01c2031cf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OnLkox--VU14",
+        "outputId": "29a4a790-3358-48b6-d63b-24c01c2031cf"
       },
       "execution_count": 6,
       "outputs": [
@@ -132,9 +132,447 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f4ITOsyBVYyv",
+        "outputId": "e6bebe21-09c3-4c93-aa6e-7a83b9191120"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c=d=e=3"
+      ],
+      "metadata": {
+        "id": "qRBfJ5MHYLon"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c,d,e"
+      ],
+      "metadata": {
+        "id": "ygI_VpGWYLwS",
+        "outputId": "dd2c7f34-d347-484f-a8b2-4a1995d64d18",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(3, 3, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(c)"
+      ],
+      "metadata": {
+        "id": "6CJFCDonYL3n",
+        "outputId": "3b01d8fb-9fd0-4b8d-b15a-0133b1e76cd3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(d)"
+      ],
+      "metadata": {
+        "id": "uk87HwIvYL7A",
+        "outputId": "5f544484-1e28-40a7-d90a-3090bc4becd9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(e)"
+      ],
+      "metadata": {
+        "id": "y-LWMKfeYL-L",
+        "outputId": "8b14c1d9-ce4e-4255-a191-b06f863327e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A=2"
+      ],
+      "metadata": {
+        "id": "OxYHW_nYY2oP"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a"
+      ],
+      "metadata": {
+        "id": "iw5ei3VIY2sP",
+        "outputId": "78474d9c-cce8-4563-a4a5-b1b7c8dc8aa1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A"
+      ],
+      "metadata": {
+        "id": "EvoyhIc7Y2v_",
+        "outputId": "dae201a4-132a-415c-9819-a17d8902a881",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "變數=1"
+      ],
+      "metadata": {
+        "id": "S_TUK8odY2zS"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "變數"
+      ],
+      "metadata": {
+        "id": "FxAO6lOgYMA5",
+        "outputId": "84c6987d-a5de-4c82-8314-d37b9ca7c417",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"你好\")"
+      ],
+      "metadata": {
+        "id": "aWAEKVLYZF93",
+        "outputId": "e96f5b36-b1dd-433c-9bbd-962519893eb3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "你好\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f=1\n",
+        "#g=2\n",
+        "h=3"
+      ],
+      "metadata": {
+        "id": "j1gYFD_uZGEn"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f"
+      ],
+      "metadata": {
+        "id": "h0PxYyRXZGKH",
+        "outputId": "2233c08b-d66c-4233-dd0c-35638299327e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "g"
+      ],
+      "metadata": {
+        "id": "9qTBANMtZGM_",
+        "outputId": "3663ef9c-937b-4c3a-a676-819d62f4a90e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 178
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-26-a5938ace3f42>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'g' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "h"
+      ],
+      "metadata": {
+        "id": "O-35x0EeZGRR",
+        "outputId": "f8dcf0b3-011e-4d1f-bcd7-5e00a5482d83",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "i=4\n",
+        "j=5\n",
+        "#k=6"
+      ],
+      "metadata": {
+        "id": "WoKIzO42Zdq_"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "i"
+      ],
+      "metadata": {
+        "id": "zNM0Dy3rZdvr",
+        "outputId": "87dc9671-c4a6-468b-9bd4-bfb9168d8491",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "j"
+      ],
+      "metadata": {
+        "id": "EQlkRjcwZdyH",
+        "outputId": "1bf81133-b000-4308-b976-dc936309cbc2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "k"
+      ],
+      "metadata": {
+        "id": "JilDEYuIZoef",
+        "outputId": "ff88cff3-588d-46cc-b350-87fbe086e371",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 178
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-31-141b3ea3f03f>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'k' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "f4ITOsyBVYyv"
+        "id": "KrYzBR0ZZojP"
       },
       "execution_count": null,
       "outputs": []
