使用 Colaboratory 建立

--- a/1205.ipynb
+++ b/1205.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMOLHy6yVPUcyeTqNNebEt/",
+      "authorship_tag": "ABX9TyPOvyA71T2kn0NMmWfWdSiW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -204,136 +204,391 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "國文=int(input(\"請輸入國文成績\"))"
+      ],
       "metadata": {
-        "id": "bs6ILMQafDVC"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bs6ILMQafDVC",
+        "outputId": "c49a31f4-a8eb-49e6-c4cc-b3411069a95a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "請輸入國文成績50\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "英文=int(input(\"請輸入英文成績\"))"
+      ],
       "metadata": {
-        "id": "A3Hvph-UfDYy"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A3Hvph-UfDYy",
+        "outputId": "eb620f74-6271-4f60-f5f7-e0255cec5278"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "請輸入英文成績60\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "數學=int(input(\"請輸入數學成績\"))"
+      ],
       "metadata": {
-        "id": "-g1kM0HffDcC"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-g1kM0HffDcC",
+        "outputId": "155d5704-1b51-4b70-badb-b2b5cf6a6c3d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "請輸入數學成績70\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(\"你的成績總分為:\",國文+英文+數學,sep=\"\\n\")"
+      ],
       "metadata": {
-        "id": "VF06TMgvfDfE"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VF06TMgvfDfE",
+        "outputId": "ebf59845-811a-403f-8524-0aeff5a222db"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "你的成績總分為:\n",
+            "180\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "12+3"
+      ],
       "metadata": {
-        "id": "0M_2ZL-AfDiL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0M_2ZL-AfDiL",
+        "outputId": "ef11d5e4-fccc-4a2a-e3ec-d1edffd181cc"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "12-3"
+      ],
       "metadata": {
-        "id": "UueajdX_fDlK"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UueajdX_fDlK",
+        "outputId": "dc667b76-0d19-423f-e8b6-0907034215ca"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "12*3"
+      ],
       "metadata": {
-        "id": "jJOwhMz6fDoD"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jJOwhMz6fDoD",
+        "outputId": "3b8a4d49-23b5-4008-c630-7d9fd33f13da"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "36"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "32/5"
+      ],
       "metadata": {
-        "id": "SA3r5VSifDq7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SA3r5VSifDq7",
+        "outputId": "6e5e6ded-5551-4b77-824a-86811bd21ce7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6.4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "32%5"
+      ],
       "metadata": {
-        "id": "LJYsZ-mbfDt7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LJYsZ-mbfDt7",
+        "outputId": "ac9f02b7-ea01-48f7-a2b0-d795c280263e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "32//5"
+      ],
       "metadata": {
-        "id": "Sp-9KnTsfDxb"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Sp-9KnTsfDxb",
+        "outputId": "29bc2c24-6615-4fd9-c491-56bea709c02d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "7**2"
+      ],
       "metadata": {
-        "id": "Fyb59lmAfD0s"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Fyb59lmAfD0s",
+        "outputId": "01211285-cdc5-4238-f41b-55faeb959079"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "49"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "上底=int(input(\"請輸入梯形上底長度:\"))"
+      ],
       "metadata": {
-        "id": "rSV8i85JfD30"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rSV8i85JfD30",
+        "outputId": "b1cf9066-ae42-4d73-94fc-b2e27a6bc179"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "請輸入梯形上底長度:3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "下底=int(input(\"請輸入梯形下底長度:\"))"
+      ],
       "metadata": {
-        "id": "xGWB9yawfD6i"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xGWB9yawfD6i",
+        "outputId": "a26f939f-3897-4721-ce48-bc2b10244d7a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "請輸入梯形下底長度:4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "高=int(input(\"請輸入梯形高度:\"))"
+      ],
       "metadata": {
-        "id": "Pn8MCkQdfD9b"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Pn8MCkQdfD9b",
+        "outputId": "609a4040-a9ae-4504-d134-74509d5c8225"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "請輸入梯形高度:3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "面積=(上底+下底)*高/2"
+      ],
       "metadata": {
         "id": "zIIdYqqUfEAS"
       },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "面積"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J9HRS7HyfEDS",
+        "outputId": "4df6cdb5-872d-4474-ed47-7f5e3049eef7"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "R3Hf3pxemyfe"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -341,7 +596,25 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "J9HRS7HyfEDS"
+        "id": "9jRqWMaOmykI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8TPZLJzkmynn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "W8DE6AxBmyqO"
       },
       "execution_count": null,
       "outputs": []
