使用 Colaboratory 建立

--- a/1205.ipynb
+++ b/1205.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOvyA71T2kn0NMmWfWdSiW",
+      "authorship_tag": "ABX9TyNHGT1Zsr0GrVd+PEspKn5q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -585,39 +585,86 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "身高=int(input(\"請輸入您的身高:(cm)\"))"
+      ],
       "metadata": {
-        "id": "R3Hf3pxemyfe"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R3Hf3pxemyfe",
+        "outputId": "9e48c793-65aa-4baf-ba1c-647678861c0a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "請輸入您的身高:(cm)180\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "體重=int(input(\"請輸入您的體重:(kg)\"))"
+      ],
       "metadata": {
-        "id": "9jRqWMaOmykI"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9jRqWMaOmykI",
+        "outputId": "ede806d5-9647-4f1b-fc0e-ea7928e95d1a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "請輸入您的體重:(kg)80\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "BMI=體重/(身高/100)**2"
+      ],
       "metadata": {
         "id": "8TPZLJzkmynn"
       },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "BMI"
+      ],
       "metadata": {
-        "id": "W8DE6AxBmyqO"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W8DE6AxBmyqO",
+        "outputId": "d20f8940-6fb5-4755-8c02-90b0ec72f786"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "24.691358024691358"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
     },
     {
       "cell_type": "code",
