--- a/0306.ipynb
+++ b/0306.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMpfnDwyT6q1Nkfc871BGv+",
+      "authorship_tag": "ABX9TyOsqh80Rn80xcYtDwjJ65Ch",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,28 +97,240 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a=1"
+      ],
       "metadata": {
         "id": "cfeqj4Ql9F71"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a"
+      ],
       "metadata": {
-        "id": "6bkdKdGi9F-c"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6bkdKdGi9F-c",
+        "outputId": "468b5cbc-6665-482c-f708-c8a688db6eb0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "b=2"
+      ],
       "metadata": {
         "id": "traor4mD9GBB"
       },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c4TWzuoj9GEH",
+        "outputId": "1f57cdf5-55b9-4b3d-f80b-1a527d20705f"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c=d=3"
+      ],
+      "metadata": {
+        "id": "hB81HI84-OyT"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XnDhNfhF-O15",
+        "outputId": "b4dcfe21-9fd7-478c-93e3-6f3a22652da9"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qGnZqWot-O4p",
+        "outputId": "2b41e5af-5579-4bf4-d01b-31fb87e8285b"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a,b,c,d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wdC-_QRN-O7T",
+        "outputId": "98bdae4c-72cb-4e5f-eafd-e9649054269f"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 2, 3, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "e=(\"hello\")"
+      ],
+      "metadata": {
+        "id": "zGsDBlgE-O-M"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "e"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "yg7G8bxX-PDk",
+        "outputId": "82021aea-97e4-46df-cd7f-af3a28f76437"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'hello'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a,b,c,d,e"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JET8s6pt-PGK",
+        "outputId": "94651f81-d1aa-4ea7-9ff2-6519d23297cb"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 2, 3, 3, 'hello')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "X92MiQgw-PI3"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -126,7 +338,25 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "c4TWzuoj9GEH"
+        "id": "N8l82Cca-PLb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VNlWL4QO-PS1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "uBOj_40a-PaQ"
       },
       "execution_count": null,
       "outputs": []
