使用 Colaboratory 建立

--- a/0320.ipynb
+++ b/0320.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCDbSbLW9POauxAOzY/TXc",
+      "authorship_tag": "ABX9TyOt70We7eWhIYBzTgbw6Zu1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -394,16 +394,16 @@
     {
       "cell_type": "code",
       "source": [
-        "c=input(\"請輸入國文成績\")"
+        "國文=int(input(\"請輸入國文成績\"))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "06BfMe7AiUxs",
-        "outputId": "fcac0e9a-26c3-4080-e196-3ab3bdbd06f8"
+        "outputId": "90947521-d7a9-4226-d2af-27da6b99410c"
       },
-      "execution_count": 16,
+      "execution_count": 38,
       "outputs": [
         {
           "name": "stdout",
@@ -417,16 +417,16 @@
     {
       "cell_type": "code",
       "source": [
-        "d=input(\"請輸入英文成績\")"
+        "英文=int(input(\"請輸入英文成績\"))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "d4kZxuzIiU0i",
-        "outputId": "e1b7b5a3-f65c-4516-8591-3771b0824283"
+        "outputId": "5fffe416-ca33-4bb2-bfcc-830634441eff"
       },
-      "execution_count": 17,
+      "execution_count": 39,
       "outputs": [
         {
           "name": "stdout",
@@ -440,16 +440,16 @@
     {
       "cell_type": "code",
       "source": [
-        "e=input(\"請輸入數學成績\")"
+        "數學=int(input(\"請輸入數學成績\"))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eGmkjMRyiU3b",
-        "outputId": "a87ae0c5-ac62-40b6-f0a5-83b76812e2f6"
+        "outputId": "58cbd9b8-b3c0-4deb-fd21-192204fcf13c"
       },
-      "execution_count": 18,
+      "execution_count": 41,
       "outputs": [
         {
           "name": "stdout",
@@ -463,22 +463,23 @@
     {
       "cell_type": "code",
       "source": [
-        "test3=int(input(\"你的成績總分為\"))"
+        "print(\"你的成績總分為:\",國文+英文+數學,sep=\"\\n\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "x1vXCFU7iU_g",
-        "outputId": "2d7e4d5d-6158-447b-a468-8fd9635b833c"
+        "outputId": "11e86deb-05b3-4300-a70f-f11666725f90"
       },
-      "execution_count": 20,
+      "execution_count": 42,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "你的成績總分為180\n"
+            "你的成績總分為:\n",
+            "180\n"
           ]
         }
       ]
@@ -592,16 +593,16 @@
     {
       "cell_type": "code",
       "source": [
-        "身高=input(\"請輸入你的身高(cm):\")"
+        "身高=int(input(\"請輸入你的身高(cm):\"))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "McJD1jmnZkxM",
-        "outputId": "47012d70-2350-42f8-8ba2-31084ae631a4"
+        "outputId": "3ce95dbf-0a15-4956-ae24-8a60281c1555"
       },
-      "execution_count": 27,
+      "execution_count": 33,
       "outputs": [
         {
           "name": "stdout",
@@ -615,16 +616,16 @@
     {
       "cell_type": "code",
       "source": [
-        "體重=input(\"請輸入你的體重(kg):\")"
+        "體重=int(input(\"請輸入你的體重(kg):\"))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lp4tqUKDZkzz",
-        "outputId": "1c6bd3b9-7adc-4b8e-984d-2b4e0d00bf5f"
+        "outputId": "1ee99ace-0521-487f-a5e6-12838c7a0992"
       },
-      "execution_count": 29,
+      "execution_count": 34,
       "outputs": [
         {
           "name": "stdout",
@@ -641,36 +642,36 @@
         "BMI=體重/(身高/100)**2"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
-        },
-        "id": "MoN1mhh5Zk4D",
-        "outputId": "b108a880-94a0-4297-a9eb-cd973538065d"
+        "id": "MoN1mhh5Zk4D"
       },
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "unsupported operand type(s) for /: 'str' and 'int'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-32-fd19c7732ee8>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mBMI\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0m體重\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m身高\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'str' and 'int'"
-          ]
-        }
-      ]
+      "execution_count": 36,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "BMI"
+      ],
       "metadata": {
-        "id": "HXX2bIz-Zk7b"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HXX2bIz-Zk7b",
+        "outputId": "e82be205-dd8b-4196-a7b4-07b0b8cfc635"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "24.691358024691358"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
     },
     {
       "cell_type": "code",
